really final touches

--- a/report.html
+++ b/report.html
@@ -18994,7 +18994,7 @@ IiIiIiNNX5CJiIiIiIiIiMhI+/8kglbBwy4BpQAAAABJRU5ErkJggg==
  Following their multi-scale approach, the outputs of the two convolutional layers and the last maxpool layer are then combined. After concatenation, the activations are fed into two fully connected layers, each of which is followed by a dropout layer with a keeprob of 0.5. Finally, a fully connected output layer with 43 output neurons, which corresponds to the number of classes, is connected to a softmax function to compute a probability for each class.
  For all layers, a rectified linear activation function was used. In addition "SAME" padding was used in the convolutional layers and "VALID" for the maxpool layers. The archicture of the network is also shown in the figure below.
 With this architecture I am able to achieve a test set accuracy of 97.4%.</p>
-<p><img src="cnn_architecture.png" alt="alt text" title="architecture"></p>
+<p><img src="cnn_architecture1.png" alt="alt text" title="architecture"></p>
 
 </div>
 </div>
